[package]
name = "rust-transaction-validator"
version = "0.1.0"
edition = "2021"
authors = ["Tony Chuks Awunor <chuksawunor@guardsarm.com>"]
description = "Memory-safe financial transaction validator for fraud detection and compliance"
license = "MIT"
repository = "https://github.com/guardsarm/rust-transaction-validator"
keywords = ["financial", "transaction", "validation", "fraud", "memory-safe"]
categories = ["finance", "cryptography"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "validate_transactions"
path = "examples/validate_transactions.rs"
